<resources>
    <string name="app_name">Asynct Task vs React</string>
    <string name="action_settings">Settings</string>
    <string name="enter_url">Enter URL</string>
    <string name="execute_with">Execute with:</string>
    <string name="star_wars_api">Star Wars API</string>
    <string name="luke_skywalker">Luke Skywalker</string>
    <string name="yavin_iv">Yavin IV</string>
    <string name="death_star">Death Star</string>
    <string name="asynctask">Async Task</string>
    <string name="react">React</string>
    <string name="execute">Execute</string>
    <string name="result">result..</string>
    <string name="compare_asynctask_and_react_implementation_for_http_requests">Compare AsyncTask and React implementation for HTTP requests</string>
</resources>
